--- a/#src/index.html
+++ b/#src/index.html
@@ -1,81 +1,31 @@
 
   @@include('_header.html')
-<main class="main">
-    <div class="container">
-      <div class="row">
-        <div class="col any-title">
-          <h2>Any Title</h2>
-          <p class="any_sub-title">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Vero asperiores dicta optio deserunt illum veritatis
-              excepturi. Quod porro, aliquid culpa voluptatibus, deleniti commodi?
-          </p>
-        </div>
-        <!-- /.col main-title -->
-      </div>
-      <!-- /.row -->
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card shadow">
-            <div class="card-header">
-              <div class="media">
-                <img src="https://picsum.photos/50" class="mr-3 rounded-circle" alt="title image">
-                <div class="media-body">
-                  <h5 class="mt-0">ADIDAS</h5>
-                  (30 дней - 90 дней)
-                </div>
-              </div>
+<div class="container-fluid">
+  <div class="row justify-content-md-center">
+    <div class="col-md-5 mt-5">
+      <div class="card mt-5 shadow p-3 mb-5 bg-white rounded">
+        <div class="card-header text-center">
+          <h1>Admin Page</h1> 
+        </div><!--card-header-->
+        <div class="card-body">
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
-            <img src="https://picsum.photos/100/140" class="card-img-top" alt="image">
-            <div class="card-body">
-              <h5 class="card-title">Ваш дохож 10 500 руб. в месяц</h5>
-              <p class="card-text">Цена за м 2 в день: 350 руб. Срок размещения: 30 дней - 90 дней</p>
-
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
-          </div>
-        </div>
-        <div class="col-md-4 ">
-          <div class="card shadow">
-            <div class="card-header">
-              <div class="media">
-                <img src="https://picsum.photos/50" class="mr-3 rounded-circle" alt="title image">
-                <div class="media-body">
-                  <h5 class="mt-0">ADIDAS</h5>
-                  (30 дней - 90 дней)
-                </div>
-              </div>
-            </div>
-            <img src="https://picsum.photos/100/160" class="card-img-top" alt="image">
-            <div class="card-body">
-              <h5 class="card-title">Ваш дохож 10 500 руб. в месяц</h5>
-              <p class="card-text">Цена за м 2 в день: 350 руб. Срок размещения: 30 дней - 90 дней</p>
-
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="card shadow">
-            <div class="card-header">
-              <div class="media">
-                <img src="https://picsum.photos/50" class="mr-3 rounded-circle" alt="title image">
-                <div class="media-body">
-                  <h5 class="mt-0">ADIDAS</h5>
-                  (30 дней - 90 дней)
-                </div>
-              </div>
-            </div>
-            <img src="https://picsum.photos/160/80" class="card-img-top" alt="image">
-            <div class="card-body">
-              <h5 class="card-title">Ваш дохож 10 500 руб. в месяц</h5>
-              <p class="card-text">Цена за м 2 в день: 350 руб. Срок размещения: 30 дней - 90 дней</p>
-
-            </div>
-          </div>
+            <div class="form-check mt-5"></div>
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
+          </form>
         </div>
       </div>
     </div>
-
-</main>
+  </div>
+</div>
   @@include('_footer.html')
 <script src="js/script.min.js"></script>
 </body>
